--- a/style.css
+++ b/style.css
@@ -104,8 +104,9 @@ main {
 }
 
 
-@media screen and (max-width: 720px) and (min-width: 200px) {
+@media screen and (max-width: 820px) and (min-width: 200px) {
     body {
+        width: 100%;
         margin: 0;
         padding: 0;
         border: 0;
@@ -116,7 +117,7 @@ main {
         width: 100%;
         display: grid;
         grid-template-columns: 1fr;
-        gap: 2em;
+        gap: 1em;
     }
 
     #result-container {
@@ -140,4 +141,15 @@ main {
         font-size: 1.5rem;
     }
 
+
+    .reaction-item {
+        width: 100%;
+        background-color: rgb(250, 240, 228);
+        height: auto;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        margin: 3px 5px;
+        border-radius: 5px;
+    }
 }
