--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -133,10 +137,14 @@ main {
         height: 100px;
         background-image: radial-gradient(blue, black);
         border-radius: 50%;
-        padding: 35px 30px;
+        padding: 25px 30px;
         margin: 0 auto;
-        line-height: 0;
-        font-size: 1.5rem;
+        line-height: 3px;
+        font-size: 1rem;
+    }
+
+    .result-number p{
+        font-size: medium;
     }
 
     .reaction-container {
