changging font size

--- a/style.css
+++ b/style.css
@@ -31,10 +31,14 @@ main {
     height: 100px;
     background-image: radial-gradient(blue, black);
     border-radius: 50%;
-    padding: 35px 30px;
+    padding: 10px 10px;
     margin: 0 auto;
     line-height: 0;
     font-size: 1.5rem;
+}
+
+.result-number p{
+    font-size: small;
 }
 
 .result-output-text p {
@@ -144,7 +148,7 @@ main {
     }
 
     .result-number p{
-        font-size: medium;
+        font-size: 0.5rem;
     }
 
     .reaction-container {
